--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:background="#F28B4A">
+    android:background="@color/background">
 
     <ImageView
         android:layout_width="200dp"
