--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="660dp"
-        android:background="@drawable/custom_bg_register"
+        android:background="@color/background"
         android:orientation="vertical">
 
         <TextView
