--- a/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E00A0A</color>
-    <color name="background">#BAE76D20</color>
+    <color name="primary">#BAE76D20</color>
+    <color name ="background">#F28B4A</color>
 </resources>
