--- a/TimeScheduleMobileGroup11/app/src/main/res/drawable/custom_bg_register.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/drawable/custom_bg_register.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F28B4A"/>
+    <solid android:color="@color/background"/>
     <corners android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp"/>
 
