--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -16,38 +16,47 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"/>
 
-    <EditText
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Mã số sinh viên"
-        android:textColorHint="@color/white"
-        android:textSize="24sp"
-        android:textColor="#FFFFFFFF"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/border_edittext"
-        android:singleLine="true"
-        android:drawableLeft="@drawable/person_26"
-        android:drawablePadding="10dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:textColorHint="@color/white"
-        android:hint="Mật khẩu"
-        android:inputType="textPassword"
-        android:textColor="#FFFFFFFF"
-        android:textSize="24sp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/lock_26"
-        android:drawablePadding="10dp"
-        android:drawableRight="@drawable/eye_26"
-        android:singleLine="true" />
+        android:layout_marginTop="50dp">
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Mã số sinh viên"
+            android:textColorHint="@color/white"
+            android:textSize="24sp"
+            android:textColor="#FFFFFFFF"
+            android:background="@drawable/border_edittext"
+            android:singleLine="true"
+            android:drawableLeft="@drawable/person_26"
+            android:drawablePadding="10dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textColorHint="@color/white"
+            android:hint="Mật khẩu"
+            android:inputType="textPassword"
+            android:textColor="#FFFFFFFF"
+            android:textSize="24sp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/border_edittext"
+            android:drawableLeft="@drawable/lock_26"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/eye_26"
+            android:singleLine="true" />
+
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,6 +77,7 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Đăng nhập"
@@ -75,9 +85,10 @@
             android:padding="10dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
-            android:backgroundTint="#F28B4A"/>
+            android:backgroundTint="@color/background"/>
 
         <Button
+            android:id="@+id/btnRegister"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Đăng ký"
@@ -87,7 +98,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:backgroundTint="#FFFFFF"
-            app:strokeColor="#F28B4A"
+            app:strokeColor="@color/background"
             app:strokeWidth="3dp"/>
 
 
