--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
@@ -87,6 +87,7 @@
 
 
         <EditText
+            android:id="@+id/edtDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -138,6 +139,7 @@
             android:drawablePadding="10dp"/>
 
         <Button
+            android:id="@+id/btnRegisterSucess"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
