--- a/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="red">#E00A0A</color>
     <color name="primary">#BAE76D20</color>
     <color name ="background">#F28B4A</color>
+    <color name ="colorIcon">#686464</color>
+    <color name ="colorIconTittle">#E75E07</color>
 </resources>
