--- a/TimeScheduleMobileGroup11/app/src/main/res/drawable/custom_border_button_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/drawable/custom_border_button_login.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="3dp" android:color="@color/background"/>
     <corners android:radius="100dp"/>
+    <solid android:color="@color/background"/>
 </shape>
