--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -82,10 +82,13 @@
             android:layout_height="wrap_content"
             android:text="Đăng nhập"
             android:textSize="24sp"
-            android:padding="10dp"
+            android:padding="12dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
-            android:backgroundTint="@color/background"/>
+            android:backgroundTint="@color/background"
+            android:textColor="@color/white"
+
+            />
 
         <Button
             android:id="@+id/btnRegister"
@@ -94,7 +97,7 @@
             android:text="Đăng ký"
             android:textSize="24sp"
             android:textColor="#F28B4A"
-            android:padding="10dp"
+            android:padding="12dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:backgroundTint="#FFFFFF"
@@ -104,7 +107,5 @@
 
 
     </LinearLayout>
-
-
 
 </LinearLayout>
