--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo_icon_1"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"/>
 
