--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_schedule.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_schedule.xml
@@ -6,12 +6,109 @@
     tools:context=".fragment.ScheduleFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Schedule Page"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#18A055"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <ImageButton
+                    android:id="@+id/btnBacktoHome"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="40dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/back_white_40" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:layout_marginBottom="40dp"
+                    android:padding="10dp"
+                    android:text="Thời khóa biểu"
+                    android:textColor="#FFFFFF"
+                    android:textSize="26sp" />
+
+                <ToggleButton
+                    android:id="@+id/toggle_ngay"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/toggle_button_background"
+                    android:padding="10dp"
+                    android:textColor="#FFFFFF"
+                    android:textOff="Ngày"
+                    android:textOn="Ngày"
+                    android:layout_marginBottom="40dp"
+                    android:textSize="18sp"/>
+
+                <ToggleButton
+                    android:id="@+id/toggle_tuan"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:layout_marginBottom="40dp"
+                    android:background="@drawable/toggle_button_background"
+                    android:padding="10dp"
+                    android:textColor="#FFFFFF"
+                    android:textOff="Tuần"
+                    android:textOn="Tuần"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
+                <ImageButton
+                    android:id="@+id/btnBackDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_arrow_back_ios_new_24" />
+                <TextView
+                    android:id="@+id/txtDayMonthYear"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:layout_marginStart="10dp"
+                    android:padding="10dp"
+                    android:text="Từ 29/7/2024 đến 04/08/2024 "
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
+                <ImageButton
+                    android:id="@+id/btnFollowDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_arrow_forward_ios_24" />
+            </LinearLayout>
+
+        </LinearLayout>
+        <ListView
+            android:id="@+id/lvSubjects"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
 
 </FrameLayout>
