--- a/TimeScheduleMobileGroup11/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/schedule_fragement_icon"/>
     <item
         android:id="@+id/examSchedule"
-        android:title="Lịch thi"
+        android:title="Sự kiện"
         android:enabled="true"
         android:icon="@drawable/event_fragement_icon"/>
     <item
