--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"/>-->
             <ImageView
+                android:id="@+id/imvContact"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/contact_icon"
