--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -24,12 +24,13 @@
 
 
         <EditText
+            android:id="@+id/edtUserCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:hint="Mã số sinh viên"
+            android:hint="@string/studentCode"
             android:textColorHint="@color/white"
             android:textSize="24sp"
             android:textColor="#FFFFFFFF"
@@ -38,13 +39,14 @@
             android:drawableLeft="@drawable/person_26"
             android:drawablePadding="10dp"/>
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/white"
-            android:hint="Mật khẩu"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:textColor="#FFFFFFFF"
             android:textSize="24sp"
@@ -65,22 +67,22 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_bg_login">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Quên mật khẩu?"
-            android:textColor="#3F51B5"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="10dp"-->
+<!--            android:text="@string/forgotPassword"-->
+<!--            android:textColor="#3F51B5"-->
+<!--            android:textSize="15sp"-->
+<!--            android:textStyle="bold" />-->
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="Đăng nhập"
+            android:text="@string/login"
             android:textSize="24sp"
             android:padding="12dp"
             android:layout_gravity="center"
@@ -91,10 +93,10 @@
             />
 
         <Button
-            android:id="@+id/btnRegister"
+            android:id="@+id/btnForgotPassword"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="Đăng ký"
+            android:text="@string/forgotPassword"
             android:textSize="24sp"
             android:textColor="#F28B4A"
             android:padding="12dp"
