change logo, add translate for contact click icon eye show password

--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_dialog_contact.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_dialog_contact.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".dialog.DialogContact"
     android:orientation="vertical"
-    android:background="@color/background2">
+    android:background="@drawable/border_dialog_contact">
 
     <TextView
         android:layout_width="match_parent"
