--- a/TimeScheduleMobileGroup11/app/src/main/res/values/themes.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.TimeScheduleMobileGroup11" parent="Base.Theme.TimeScheduleMobileGroup11" />
+    <style name="Dialog_translate">
+        <item name="android:windowEnterAnimation">@anim/slide_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
+    </style>
 </resources>
