--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
@@ -25,9 +25,10 @@
                 android:src="@drawable/contact_icon"
                 android:padding="15dp"/>
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/logo_icon_1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/logo_app"
+                android:layout_gravity="center"
                 android:layout_weight="1"/>
             <ImageView
                 android:layout_width="50dp"
@@ -66,7 +67,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:background="@color/access_color"
+                        android:background="@drawable/border_access_home"
                         android:orientation="horizontal"
                         android:padding="12dp">
 
