--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,9 @@
             android:background="@drawable/border_edittext"
             android:singleLine="true"
             android:drawableLeft="@drawable/person_26"
-            android:drawablePadding="10dp"/>
+            android:drawablePadding="10dp"
+            android:maxLength="50"
+            />
         <EditText
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
@@ -56,7 +58,8 @@
             android:drawableLeft="@drawable/lock_26"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/eye_26"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:maxLength="50"/>
         <!--<CheckBox
             android:id="@+id/chkShowPass"
             android:layout_width="match_parent"
