--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_other.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_other.xml
@@ -3,15 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.OtherFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Other Page"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:layout_centerInParent="true"/>
+
+
 
 </FrameLayout>
