--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_other.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_other.xml
@@ -134,6 +134,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/btnKhaibao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Khai báo y tế"
@@ -157,6 +158,7 @@
                 android:paddingEnd="16dp" />
 
             <Button
+                android:id="@+id/btnThuctap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Việc làm thực tập"
