--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
@@ -130,7 +130,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Sự kiện mới nhất"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
                     <ImageView
                         android:id="@+id/imvPhotoEvent"
@@ -145,8 +145,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Sinh viên MJIT hướng dẫn học sinh Trường THPT Waseda (Nhật Bản) trải nghiệm văn hóa Việt"
-                        android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:singleLine="true"/>
                 </LinearLayout>
 
                 <!--        thong tin khac-->
