--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_register.xml
@@ -147,23 +147,23 @@
             android:drawableLeft="@drawable/icons_schedule"
             android:drawablePadding="10dp"/>
 
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/border_edittext"
-            android:hint="Mật khẩu"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="24sp"
-            android:inputType="textPassword"
-            android:drawableLeft="@drawable/lock_26"
-            android:drawableRight="@drawable/eye_26"
-            android:drawablePadding="10dp"/>
+<!--        <EditText-->
+<!--            android:id="@+id/edtPassword"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:background="@drawable/border_edittext"-->
+<!--            android:hint="Mật khẩu"-->
+<!--            android:padding="15dp"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textColorHint="@color/white"-->
+<!--            android:textSize="24sp"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:drawableLeft="@drawable/lock_26"-->
+<!--            android:drawableRight="@drawable/eye_26"-->
+<!--            android:drawablePadding="10dp"/>-->
 
 <!--        <EditText-->
 <!--            android:layout_width="match_parent"-->
