--- a/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="logo">#3b9c8a</color>
     <color name="access_color">#51AFBFBC</color>
     <color name="background2">#77F8ECC7</color>
+    <color name="notificationTitle">#F8E224</color>
 </resources>
