--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
     android:background="@color/background">
 
     <ImageView
+        android:id="@+id/imvLogo"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/logo_icon_1"
