chưa hoàn thiện chi tiết sự kiện

--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_event.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/activity_event.xml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventActivity">
+    tools:context=".EventActivity"
+    android:orientation="vertical"
+    android:padding="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
+        <ImageView
+            android:id="@+id/imvPhotoEvent"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/back_40"
+            android:padding="5dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Thông tin về các sự kiện"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:gravity="center"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#908D8D"
+        android:alpha="0.5"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
+    <ListView
+        android:id="@+id/lvMoreEvents"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
