--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/fragment_home.xml
@@ -149,6 +149,7 @@
                         android:textSize="17sp"
                         android:textStyle="bold"
                         android:singleLine="true"
+                        android:layout_marginStart="10dp"
                         android:layout_marginEnd="20dp"/>
                 </LinearLayout>
 
