--- a/TimeScheduleMobileGroup11/app/src/main/res/layout/item_list_schedule.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/layout/item_list_schedule.xml
@@ -16,22 +16,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txtNumberOfLession"
-            android:layout_width="80dp"
-            android:layout_height="200dp"
-            android:text="Tiết\n7-11"
-            android:textColor="@color/black"
-            android:textSize="26sp"
-            android:padding="10dp"
-            />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Tiết"
+                android:textColor="@color/black"
+                android:textSize="26sp"
+                android:padding="10dp"
+                />
+            <TextView
+                android:id="@+id/txtLessionBegin"
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:text="Tiết\n7-11"
+                android:textColor="@color/black"
+                android:textSize="26sp"
+                android:padding="10dp"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:orientation="vertical"
             android:gravity="center_vertical">
             <TextView
-                android:id="@+id/txtName"
+                android:id="@+id/txtSubjectName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -40,7 +53,7 @@
                 android:textSize="28sp"
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/txtRoom"
+                android:id="@+id/txtClassroomCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
